--- a/RestaurantManagementApp/Format/Porosite/Porosia-nga-tavolina/TabletiPorosiaForm.resx
+++ b/RestaurantManagementApp/Format/Porosite/Porosia-nga-tavolina/TabletiPorosiaForm.resx
@@ -342,4 +342,10 @@
         AABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="menaxhimiIRestaurantitDataSet.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>170, 17</value>
+  </metadata>
+  <metadata name="menaxhimiIRestaurantitDataSetBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>393, 17</value>
+  </metadata>
 </root>
